2차 멘토링 코드리뷰 (#165)
* [feat] 로그아웃 (#78)

* feat: payload 메서드 구현

* feat: 회원가입, 로그인 쿠키 추가

* test: 로그아웃 테스트 (red)

* test: 로그아웃 테스트 (red)

* refactor: payload 변경 중

* test: 로그아웃 정상 (green)

* fix: 회원가입 양방향 관계 설정

* 코드래빗 리뷰 개선

* fix: 커스텀 필터 경로 문제 수정

* feat: bearer 토큰 검증 강화

* [feat] 모임 수정 (#79)

* feat : test case 작성 완료

* feat : 로직 구현 완료

* fix : code-rabbit review 반영

---------

Co-authored-by: EpicFn <rlagurwls056@gmail.com>

* Update autoPR.yml (#82)

* [feat] 모임 삭제 (#81)

* feat : test case 작성

* feat : 로직 구현 완료

---------

Co-authored-by: EpicFn <rlagurwls056@gmail.com>

* [refactor] TestInitData 획일화 (#80)

* feat: 모임참여자-할당 아이템 양방향 설정

* feat: 모임으로 모임 참여자 목록 조회 쿼리

* feat: 초기 데이터

* refactor: 초기 데이터 맞춰 변경

* refactor: 코드래빗 반영

* [feat] 모임 소개 - 누구나 (#84)

* feat : 테스트 케이스 작성

* feat : controller, service 로직 작성

* feat : 테스트 케이스 통과

---------

Co-authored-by: EpicFn <rlagurwls056@gmail.com>

* refactor : 클럽 정보 조회 로직 통합 (#85)

Co-authored-by: EpicFn <rlagurwls056@gmail.com>

* [Feat] : 프리셋 수정 (#83)

* feat : 프리셋 수정

* [feat] 모임 소개 - 누구나 (#84)

* feat : 테스트 케이스 작성

* feat : controller, service 로직 작성

* feat : 테스트 케이스 통과

---------

Co-authored-by: EpicFn <rlagurwls056@gmail.com>

* CodeRabbit 리뷰 반영

* feat : 프리셋 수정

* CodeRabbit 리뷰 반영

* CodeRabbit 리뷰 반영

* 테스트 코드 에러 해결

---------

Co-authored-by: Hyeok Jin Kim <71928299+EpicFn@users.noreply.github.com>
Co-authored-by: EpicFn <rlagurwls056@gmail.com>

* [feat] 회원 탈퇴 (#86)

* test: 회원탈퇴 테스트 (red)

* feat: 회원탈퇴 메서드 추가

refactor: 만료 쿠키 생성 메서드 분리

* test: 회원탈퇴 테스트 (green)

* refactor: 주석 및 메소드 순서 점검

* fix: 충돌수정 2

* fix: 코드래빗 반영

* [Feat] 내 일정 목록 조회 (#87)

* feat: 설명스키마 추가

* refactor: 초기데이터 수정

* feat: 내 일정 목록 조회

* refactor: 코드래빗 반영

* [feat] 공개 모임 목록 조회 (#88)

* feat : 테스트 케이스 작성

* feat : 로직 구현

* fix : 테스트 케이스 성공

* feat : paging 추가

* feat : swagger 문서화 요소 추가

---------

Co-authored-by: EpicFn <rlagurwls056@gmail.com>

* [feat] Access token 재발급 (#90)

* feat: access token 재발급 메서드

* test: access token 재발급 테스트 (g